Update 토스 서비스를 구성하는 서버 기술.md

--- a/토스 서비스를 구성하는 서버 기술.md
+++ b/토스 서비스를 구성하는 서버 기술.md
@@ -1,5 +1,5 @@
 ## 토스 | SLASH 21 - 토스 서비스를 구성하는 서버 기술
-[토스 | SLASH 21 - 토스 서비스를 구성하는 서버 기술]()
+[토스 | SLASH 21 - 토스 서비스를 구성하는 서버 기술](https://www.youtube.com/watch?v=YBXFRSAXScs&si=gy0kZuSkipSB43KJ)
 
 ---
 1. [토스 서비스를 구성하는 서버 기술들](##1.-토스-서비스를-구성하는-서버-기술들)
